# grlrpc

./: .gitignore  CMakeLists.txt
include/: network.h  rpc_framework.h  serialization_framework.h  type_registry.h  user_type_serializers.h  user_types.h
src/: main.cpp  network.cpp  rpc_framework.cpp  serialization_framework.cpp  user_type_serializers.cpp  user_types.cpp
tests/: type_registry_test.cpp
